# akioi-2048-python

./: .gitattributes  .mado.toml  AGENTS.md  Cargo.toml  README.md  clippy.toml  pyproject.toml  ruff.toml  rules.html  simple_test.py
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml  release.yml
akioi_2048/: __init__.py  __init__.pyi
src/: board.rs  game.rs  lib.rs
tests/: __init__.py  python.rs  test_init.py  test_step.py
