[package]
name = "akioi-2048"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"] # 生成 Python 扩展


[features]
default = []
python-bindings = [
  "pyo3/extension-module", # 产出可导入的 .so/.pyd
  "pyo3/abi3-py310",       # 与 ≥3.10 的解释器 ABI 兼容
]


[dependencies]
rand = "0.9.1"
pyo3 = { version = "0.21", default-features = false, features = ["macros"] }


[dev-dependencies]
which = "8"          # 检查 maturin / pytest 是否存在
anyhow = "1"
once_cell = "1.21.3"


[profile.dev]
incremental = true # 提升二次编译速度
