[project]
name = "akioi-2048"
version = "0.1.0"
description = "akioi backend: one-step pure function for RL or search"
authors = [{ name = "jasonxue" }]
requires-python = ">=3.8"

[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "akioi_2048"
